[package]
name = "tictactoe"
authors = ["Rhelv <bionicvnb@gmail.com>"]
description = "A simple tictactoe game."
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Rhelvetican/tictactoe"
homepage = "https://github.com/Rhelvetican/tictactoe"

[dependencies]
array2d = "0.3.2"
rprompt = "2.1.1"
rand = "0.8.5"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"

[build]
rustflags = ["-C", "target-cpu=native", "link-arg=-fuse-ld=lld"]