[package]
name = "tictactoe_game"
authors = ["Rhelv <bionicvnb@gmail.com>"]
description = "A simple tictactoe game."
version = "1.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Rhelvetican/tictactoe"
homepage = "https://github.com/Rhelvetican/tictactoe"

[dependencies]
array2d = "0.3.2"
rprompt = "2.1.1"
rand = {version = "0.8.5", default-features = false, features = ["std", "std_rng"]}

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"

[build]
rustflags = ["-C", "target-cpu=native", "link-arg=-fuse-ld=lld"]